# fashion-insights

./: .flake8  .gitignore  .gitlab-ci.yml  Makefile  README.md  mypy.ini  pyproject.toml
config/: dev.ini  dev.json  example.ini  example.json
docker/: docker-compose.yaml
src/: config.py  data_analysis.py  data_ingress.py  main.py  test.py
tests/: run_tests.py  test_config.py
